# Tab-Transformer-Plus-Plus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TabTransformer_Residual_Learning.ipynb  Untitled-1.ipynb  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
src/tab_transformer_plus_plus/: __init__.py  model.py  tokenizer.py  train.py  utils.py
tests/: test_model.py
