[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tab-transformer-plus-plus"
version = "0.1.0"
description = "A production-ready implementation of TabTransformer++ for tabular data."
readme = "README.md"
authors = [ { name = "Elaine", email = "" } ]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "torch>=1.11",
    "scikit-learn",
    "matplotlib",
    "tqdm"
]

[project.scripts]
ttpp = "tab_transformer_plus_plus.train:main"